<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Simple Time Logger</string>
    <string name="hello_world">Hello world!</string>

    <string name="chronometer_initial_format"><xliff:g id="initial-format">%s</xliff:g></string>
    <string name="start">Start</string>
    <string name="unpause">Continue</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="reset_time">Reset</string>
    <string name="confirm_dialog">Are you sure?</string>
    <string name="sendTime">Send Time</string>
    <string name="remove_checked">Remove checked</string>
    
    <string name="about_line1">CevaOne</string>
    <string name="about_line2">support@cevaone.com</string>
    <string name="about_line3">www.cevaone.com</string>
    
    <string name="version">v1.06</string>
    
    
    <string name="pref_email">pref_email</string>
    <string name="pref_projects">pref_projects</string>
    <string name="pref_timeWhenClosed">pref_timeWhenClosed</string>
    <string name="pref_chronoStatus">pref_chronoStatus</string>
    <string name="pref_elapsedTime">pref_elapsedTime</string>
    <string name="pref_timeSincePause">pref_timeSincePause</string>
    <string name="pref_canSend">pref_canSend</string>
    
    <string name="action_remove_projects">Remove projects</string>
    <string name="action_remove_clients">Remove clients</string>
    <string name="action_reset">Reset time</string>
    <string name="action_reset_all">Reset all</string>
    <string name="action_email">Change email</string>
    <string name="action_add_project">Add project</string>
    <string name="action_add_client">Add client</string>
    <string name="action_settings">Settings</string>  
    <string name="action_view_edit">View/edit/remove</string>   
    
    <string name="email_not_set">email_not_set</string>
    <string name="positive_response">OK</string>
    <string name="negative_response">Cancel</string>
    <string name="email_not_set_message">Email has not been set, enter one now?</string>
    <string name="no_projects_message">There are no available projects, enter one now?</string>
    <string name="no_clients_message">There are no available clients, enter one now?</string>
    <string name="reset_time_confirm">Are you sure you want to reset the time?</string>
    <string name="test">Test</string>
	<string name="select_project">Project</string>
	<string name="select_client">Client</string>
	<string name="about">About</string>


    <string name="title_activity_project_manager">SimpleTimeLogger - Manage</string>

</resources>
